# my-cpp-lib

./: .gitignore  CMakeLists.txt  main.cpp
opie/: defines.h  io.h  utils.h
opie/collections/: array.h  iterator.h  linked_list.h  list.h  slice.h
opie/interfaces/: iallocator.h  iarray.h  icastable.h  icollectable.h  ievaluatable.h  iindexable.h  iiterable.h  imanipulatable.h  istr.h
opie/types/: allocator.h  option.h
